fixed spacing between image and text on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,10 +61,12 @@ a:visited {
     background: #646464;
     img {
       margin: auto;
+      margin-right: 1em;
       height: 100px;
     }
     p {
       margin: auto;
+      margin-left: 1em;
       text-align: left;
       color: #D3D4D4;
       width: 60%;
